修正: マッチングページのSupabase APIエラーと重複コード削除
- matching-unified.js: neq演算子を正しい構文に修正
- matching.html: コメントアウトされていた大量の重複スクリプトを完全削除
- クリーンなコードベースで競合を防止

--- a/matching.html
+++ b/matching.html
@@ -324,45 +324,7 @@
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
     
-    <!-- 以下のスクリプトはmatching-perfect-integrationによって無効化されます -->
-    <!-- <script src="js/matching-config.js"></script> -->
-    <!-- <script src="js/matching.js"></script> -->
-    <!-- 以下のスクリプトは全て無効化されています -->
-    <!--
-    <script src="js/matching-supabase.js"></script>
-    <script src="js/matching-supabase-optimized.js"></script>
-    <script src="js/matching-ux-improvements.js"></script>
-    <script src="js/matching-loading-fix.js"></script>
-    <script src="js/matching-critical-fix.js"></script>
-    <script src="js/matching-buttons-fix.js"></script>
-    <script src="js/matching-ai-scoring.js"></script>
-    <script src="js/matching-ai-scoring-simple.js"></script>
-    <script src="js/matching-ai-minutes-based.js"></script>
-    <script src="js/matching-ai-llm-analyzer.js"></script>
-    <script src="js/matching-ai-llm-integration.js"></script>
-    <script src="js/matching-data-integrity.js"></script>
-    <script src="js/matching-data-migration.js"></script>
-    <script src="js/matching-radar-chart.js"></script>
-    <script src="js/matching-radar-chart-enhanced.js"></script>
-    <script src="js/matching-radar-chart-fix.js"></script>
-    <script src="js/matching-radar-chart-performance.js"></script>
-    <script src="js/matching-radar-chart-ux.js"></script>
-    <script src="js/matching-radar-chart-integration.js"></script>
-    <script src="js/matching-ai-integration.js"></script>
-    <script src="js/matching-initialization-fix.js"></script>
-    <script src="js/matching-force-load.js"></script>
-    <script src="js/test-matching-functionality.js"></script>
-    <script src="js/matching-test-data.js"></script>
-    <script src="js/matching-data-validation-test.js"></script>
-    <script src="js/matching-radar-chart-test.js"></script>
-    <script src="js/matching-verify-perfection.js"></script>
-    <script src="js/matching-quick-test.js"></script>
-    <script src="js/error-diagnostic.js"></script>
-    <script src="js/production-ready-check.js"></script>
-    <script src="js/matching-manual-test.js"></script>
-    <script src="js/matching-test-data-generator.js"></script>
-    <script src="js/notifications.js"></script>
-    -->
+    <!-- 全てのマッチング機能はmatching-unified.jsに統合済み -->
     
     <!-- プロファイル詳細モーダル（必須） -->
     <script src="js/profile-detail-modal.js"></script>
