修正: マッチングページのSupabase APIエラーと紹介ページレイアウト
- matching-unified.js: Supabase neqクエリエラーを回避（全ユーザー取得後にフィルタリング）
- referral-layout-fix.css: 紹介ページの幅問題を修正（CSS詳細度を最高に）
- referral.html: レイアウト修正CSSを追加
- matching.html: キャッシュクリアのためバージョン番号更新（v4.0）

--- a/referral.html
+++ b/referral.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="css/referral-unified.css?v=1.0">
     <!-- デスクトップ表示修正 -->
     <link rel="stylesheet" href="css/referral-desktop-fix.css">
+    <!-- レイアウト幅問題修正 -->
+    <link rel="stylesheet" href="css/referral-layout-fix.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
