改善: マッチングページのUX向上
- ローディング演出を追加（3つのリングが回転するアニメーション）
- matching-loading.css: 新しいローディングスタイル作成
- プロフィールボタンのエラー修正（Supabase APIクエリを全件取得後にフィルタリング）
- コネクション状態の取得も同様に修正
- よりスムーズなユーザー体験を実現

--- a/matching.html
+++ b/matching.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/notifications.css">
     <!-- マッチングシステム統一CSS -->
     <link rel="stylesheet" href="css/matching-unified.css?v=3.0">
+    <!-- ローディング演出CSS -->
+    <link rel="stylesheet" href="css/matching-loading.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
 </head>
