紹介ページとヘッダーのUIを大幅改善
新機能:
1. 紹介リンクカードのリデザイン
   - モダンなカードデザイン
   - ホバーエフェクト
   - 改善されたボタンスタイル
   - レスポンシブ対応

2. ヘッダーユーザーメニューのリデザイン
   - 通知ボタンの改善
   - ユーザープロフィールメニューの美化
   - ドロップダウンアニメーション
   - ツールチップ風の矢印

デザインポイント:
- 16pxの角丸で統一感
- グラデーションとシャドウで立体感
- アニメーションで操作感向上
- モバイル対応完備

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
+    <!-- ヘッダーユーザーメニューのリデザイン -->
+    <link rel="stylesheet" href="css/header-user-menu-redesign.css">
     <link rel="stylesheet" href="css/event-modal.css">
     <link rel="stylesheet" href="css/event-detail-modal.css">
     <link rel="stylesheet" href="css/activity-enhanced.css">
