--- a/referral.html
+++ b/referral.html
@@ -27,6 +27,10 @@
     <link rel="stylesheet" href="css/referral-unified.css?v=1.0">
     <!-- 最終競合解消とサイズ正常化 -->
     <link rel="stylesheet" href="css/referral-final-fix.css">
+    <!-- 紹介リンクカードのリデザイン -->
+    <link rel="stylesheet" href="css/referral-link-card-redesign.css">
+    <!-- ヘッダーユーザーメニューのリデザイン -->
+    <link rel="stylesheet" href="css/header-user-menu-redesign.css">
 </head>
 <body>
     <!-- Mobile Header (ダッシュボードと同じ) -->
