修正: アバターサイズ統一、通知システム統合、パフォーマンス最適化
主な変更:
- アバターサイズをavatar-size-unified.cssで完全統一
- 通知システムをnotification-system-unified.jsに統合（29箇所の重複解消）
- トップページ動画のパフォーマンス最適化（Service Worker実装）
- event_participantsテーブルのカラム名統一
- 70個の-fix/-debug/-oldファイルの整理スクリプト追加

修正内容:
- CSS競合解消（7ファイル→1ファイルに統一）
- alert()をトースト通知に自動変換（151箇所）
- console.log削減（1,820箇所を特定）
- 画像パス統一（images/→assets/）
- ID重複削除（userAvatar）

パフォーマンス改善:
- 27MB動画の段階的読み込み実装
- SVGポスター画像でプレースホルダー表示
- Service Workerでキャッシュ戦略実装

セキュリティ監査レポート追加
技術的負債の詳細分析完了

--- a/events.html
+++ b/events.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
+    <!-- アバターサイズ統一 -->
+    <link rel="stylesheet" href="css/avatar-size-unified.css">
     <!-- カレンダー連携 -->
     <link rel="stylesheet" href="css/calendar-integration.css">
     <!-- FullCalendar CSS -->
@@ -233,7 +235,7 @@
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img src="images/default-avatar.svg" alt="User Avatar" class="user-avatar" id="userAvatar">
+                            <img src="assets/default-avatar.svg" alt="User Avatar" class="user-avatar">
                             <span class="user-name" id="userName">ゲスト</span>
                             <i class="fas fa-chevron-down"></i>
                             <div class="user-dropdown">
@@ -456,6 +458,8 @@
     <!-- 関数実行トラッカー -->
     <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
+    <!-- 統一通知システム -->
+    <script src="js/notification-system-unified.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
     <!-- Supabase参照修正（不要になったため無効化） -->
     <!-- <script src="js/supabase-wait-fix.js"></script> -->
@@ -487,5 +491,7 @@
     <script async defer src="https://apis.google.com/js/api.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
+    <!-- アバターサイズ強制適用 -->
+    <script src="js/avatar-size-enforcer.js"></script>
 </body>
 </html>
