--- a/messages.html
+++ b/messages.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="css/info-card-contrast-fix.css">
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
+    <!-- アバターサイズ統一 -->
+    <link rel="stylesheet" href="css/avatar-size-unified.css">
     <!-- サイドバーレスポンシブ統一修正 -->
     <link rel="stylesheet" href="css/sidebar-responsive-fix.css">
     <!-- ヘッダー余白修正 -->
@@ -229,7 +231,7 @@
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img src="images/default-avatar.svg" alt="User Avatar" class="user-avatar" id="userAvatar">
+                            <img src="assets/default-avatar.svg" alt="User Avatar" class="user-avatar">
                             <span class="user-name" id="userName">ゲスト</span>
                             <i class="fas fa-chevron-down"></i>
                             <div class="user-dropdown">
@@ -325,8 +327,12 @@
     <script src="js/messages-viewing-history.js"></script>
     <script src="js/notification-sender.js"></script>
     <script src="js/message-integration.js"></script>
+    <!-- 統一通知システム -->
+    <script src="js/notification-system-unified.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
+    <!-- アバターサイズ強制適用 -->
+    <script src="js/avatar-size-enforcer.js"></script>
 </body>
 </html>
