--- a/referral.html
+++ b/referral.html
@@ -233,7 +233,7 @@
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img src="images/default-avatar.svg" alt="User Avatar" class="user-avatar" id="userAvatar">
+                            <img src="assets/default-avatar.svg" alt="User Avatar" class="user-avatar">
                             <span class="user-name" id="userName">ゲスト</span>
                             <i class="fas fa-chevron-down"></i>
                             <div class="user-dropdown">
@@ -481,6 +481,8 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     <!-- 関数実行トラッカー -->
     <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
+    <!-- 統一通知システム -->
+    <script src="js/notification-system-unified.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
     <!-- Supabase参照修正（不要になったため無効化） -->
     <!-- <script src="js/supabase-wait-fix.js"></script> -->
@@ -543,5 +545,7 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     <script src="js/user-dropdown-handler.js"></script>
     <!-- シェアモーダルハンドラー -->
     <script src="js/share-modal-handler.js"></script>
+    <!-- アバターサイズ強制適用 -->
+    <script src="js/avatar-size-enforcer.js"></script>
 </body>
 </html>
