--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <!-- ユーザードロップダウン最前面修正 -->
-    <link rel="stylesheet" href="css/user-dropdown-fix-final.css">
+    <!-- <link rel="stylesheet" href="css/user-dropdown-fix-final.css"> -->
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
     <!-- アバターサイズ統一 -->
@@ -559,7 +559,7 @@
     <script src="js/dashboard.js"></script>
     <script>console.log('dashboard.js loaded');</script>
     <script src="js/profile.js?v=20250729-8"></script>
-    <script src="js/matching-buttons-fix.js"></script>
+    <!-- <script src="js/matching-buttons-fix.js"></script> -->
     <script src="js/profile-viewer.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
