メンバープロフィールモーダル修正: グローバル関数追加とSupabaseテーブル対応

--- a/members.html
+++ b/members.html
@@ -300,6 +300,23 @@
     <script src="js/dashboard.js"></script>
     <!-- Members specific scripts -->
     <script src="js/members-profile-modal.js"></script>
+    <script>
+        // モーダルの初期化を確認
+        console.log('[members.html] After members-profile-modal.js:');
+        console.log('  - window.membersProfileModal:', !!window.membersProfileModal);
+        console.log('  - window.showMemberProfileModal:', !!window.showMemberProfileModal);
+        
+        // 強制的にモーダルを初期化（フォールバック）
+        if (!window.membersProfileModal) {
+            console.log('[members.html] Forcing modal initialization...');
+            setTimeout(() => {
+                if (window.MembersProfileModal) {
+                    window.membersProfileModal = new window.MembersProfileModal();
+                    console.log('[members.html] Modal initialized by fallback');
+                }
+            }, 100);
+        }
+    </script>
     <script src="js/members-supabase.js?v=20250729"></script>
     <script src="js/member-profile-preview.js"></script>
     <script src="js/members-search.js?v=20250729"></script>
