Revert "コード整理: 重複ファイル削除、競合解消、統一版への集約完了"
This reverts commit 04c76d86f0f6c93daae9bf17ea17f3f27a26803a.

--- a/admin.html
+++ b/admin.html
@@ -331,5 +331,6 @@
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/notifications.js"></script>
 </body>
 </html>
