--- a/billing.html
+++ b/billing.html
@@ -239,5 +239,6 @@
     <script src="js/debug-logger.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/dashboard.js"></script>
+    <script src="js/notifications.js"></script>
 </body>
 </html>
