--- a/dashboard.html
+++ b/dashboard.html
@@ -461,6 +461,8 @@
     <!-- 統一通知システム -->
     <script src="js/notification-system-unified.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
+    <!-- Supabase参照修正（不要になったため無効化） -->
+    <!-- <script src="js/supabase-wait-fix.js"></script> -->
     <!-- Core initialization -->
     <script src="js/interconnect-core.js"></script>
     <!-- ゲストモード管理 -->
@@ -521,6 +523,8 @@
     <script src="js/activity-event-filter-fix.js?v=2.0"></script>
     <script src="js/dashboard-charts.js"></script>
     <script src="js/dashboard.js"></script>
+    <!-- 通知送信機能は統一版に含まれています -->
+    <!-- <script src="js/notification-sender.js"></script> -->
     <script src="js/message-integration.js"></script>
     
     <!-- グローバル閲覧履歴 -->
@@ -528,6 +532,8 @@
     <!-- TimeRex予約システム -->
     <!-- TimeRexサイトアクセス不可のため一時的にGoogle Calendar使用 -->
     <script src="js/google-calendar-booking.js?v=1.0"></script>
+    <!-- 通知機能はJSを無効化 -->
+    <!-- <script src="js/notifications.js"></script> -->
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     
