--- a/matching.html
+++ b/matching.html
@@ -332,6 +332,8 @@
     <!-- 統一通知システム -->
     <script src="js/notification-system-unified.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
+    <!-- Supabase参照修正（不要になったため無効化） -->
+    <!-- <script src="js/supabase-wait-fix.js"></script> -->
     <!-- Core utilities (必須) -->
     <script src="js/error-prevention.js"></script>
     <script src="js/null-check-fixes.js"></script>
