--- a/members.html
+++ b/members.html
@@ -380,6 +380,7 @@
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
+    <!-- <script src="js/notifications.js"></script> -->
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- 統一通知システム -->
