メンバープロフィールモーダル修正: z-index競合解決、キャッシュバスター追加、イベント処理修正

--- a/members.html
+++ b/members.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/logout-button-fix.css">
     <link rel="stylesheet" href="css/members.css">
     <link rel="stylesheet" href="css/member-profile-preview.css">
-    <link rel="stylesheet" href="css/members-profile-modal.css">
+    <link rel="stylesheet" href="css/members-profile-modal.css?v=20250811-2">
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
@@ -299,7 +299,7 @@
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/dashboard.js"></script>
     <!-- Members specific scripts -->
-    <script src="js/members-profile-modal.js"></script>
+    <script src="js/members-profile-modal.js?v=20250811-2"></script>
     <script>
         // モーダルの初期化を確認
         console.log('[members.html] After members-profile-modal.js load:');
