プロフィールモーダル完全修正: データベース構造に基づく正しい実装
【最優先】
- user_profilesテーブルを正しく使用（profilesではなく）
- connections テーブルのカラム名修正（user_id, connected_user_id）
- イベントハンドラーの重複解消（addEventListenerをコメントアウト）

【高優先】
- member-profile-preview.js: TextNodeエラー修正
- モーダルに企業情報フィールド追加（company, position, employee_count等）

【中優先】
- モーダルインスタンスの重複作成防止
- user_experiencesテーブルを使用して経歴表示
- user_business_challengesテーブルを使用して事業課題表示

--- a/members.html
+++ b/members.html
@@ -305,6 +305,12 @@
         // モーダルの初期化を確実に行う
         (function() {
             function ensureModalInitialized() {
+                // 既にインスタンスがある場合は作成しない（重複防止）
+                if (window.membersProfileModal && window.membersProfileModal.show) {
+                    console.log('[members.html] Modal instance already exists');
+                    return;
+                }
+                
                 if (typeof MembersProfileModal === 'undefined') {
                     console.error('[CRITICAL] members-profile-modal.js failed to load!');
                     // エラー時はモーダル表示を試みる（リダイレクトしない）
@@ -314,7 +320,7 @@
                             alert('プロフィールを読み込めませんでした。ページを再読み込みしてください。');
                         }
                     };
-                } else if (!window.membersProfileModal) {
+                } else {
                     console.log('[members.html] Creating modal instance');
                     window.membersProfileModal = new MembersProfileModal();
                     console.log('[members.html] Modal instance created:', !!window.membersProfileModal);
@@ -395,10 +401,10 @@
             }
             
             // モーダルインスタンスが存在しない場合の最終フォールバック
-            if (!window.membersProfileModal) {
+            if (!window.membersProfileModal || !window.membersProfileModal.show) {
                 console.error('[CRITICAL] Modal still not initialized after 1 second!');
-                // 再度初期化を試みる
-                if (window.MembersProfileModal) {
+                // 再度初期化を試みる（既存インスタンスがない場合のみ）
+                if (window.MembersProfileModal && !window.membersProfileModal) {
                     window.membersProfileModal = new window.MembersProfileModal();
                     console.log('[members.html] Emergency modal creation completed');
                 }
