--- a/members.html
+++ b/members.html
@@ -421,7 +421,7 @@
         });
     </script>
     <script src="js/members-supabase.js?v=20250729"></script>
-    <script src="js/member-profile-preview.js"></script>
+    <script src="js/member-profile-preview.js?v=20250811-fix"></script>
     <script src="js/members-search.js?v=20250729"></script>
     <script src="js/members-connection.js?v=20250729"></script>
     <script src="js/members-view-mode.js?v=20250729"></script>
