最優先〜中優先の問題を修正
🔴 最優先修正:
- calendar-integration.js: 400エラー修正（直接結合→分割クエリ）
- event_participants テーブルのカラム名統一（attendance_status→status）
- パスワード不一致チェック確認済み

🟠 高優先修正:
- SQLインジェクション対策: 検索文字列のエスケープ処理追加
- 認証エラーハンドリング: 401/403エラー時の適切なリダイレクト
- member-profile-preview.js: TypeError修正（nullチェック強化）

🟡 中優先修正:
- モーダル表示競合: z-index優先順位管理
- キャッシュ問題: JSファイルにバージョン番号追加（v=20250812）
- プロフィール編集・登録データ保存先確認済み

修正ファイル:
- js/calendar-integration.js
- js/members-supabase.js
- js/supabase-unified.js
- js/member-profile-preview.js
- css/z-index-priority.css
- members.html, events.html

--- a/events.html
+++ b/events.html
@@ -477,16 +477,16 @@
     <script src="js/profile-sync.js"></script>
     <script src="js/notifications-realtime-unified.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
-    <script src="js/event-modal.js"></script>
-    <script src="js/events-supabase.js?v=3"></script>
-    <script src="js/dashboard.js"></script>
+    <script src="js/event-modal.js?v=20250812"></script>
+    <script src="js/events-supabase.js?v=20250812"></script>
+    <script src="js/dashboard.js?v=20250812"></script>
     <!-- <script src="js/event-registration.js"></script> Disabled: Duplicate functionality with events-supabase.js -->
     <!-- <script src="js/notifications.js"></script> -->
     <!-- FullCalendar JS -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/ja.js"></script>
     <!-- カレンダー連携 -->
-    <script src="js/calendar-integration.js"></script>
+    <script src="js/calendar-integration.js?v=20250812"></script>
     <!-- Google API (オプション) -->
     <script async defer src="https://apis.google.com/js/api.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
