--- a/members.html
+++ b/members.html
@@ -300,7 +300,7 @@
     <script src="js/dashboard.js"></script>
     <!-- Members specific scripts -->
     <!-- モーダルを先に読み込む（members-supabaseより前） -->
-    <script src="js/members-profile-modal.js?v=20250811-3"></script>
+    <script src="js/members-profile-modal.js?v=20250812"></script>
     <script>
         // モーダルの初期化を確実に行う
         (function() {
@@ -420,11 +420,11 @@
             }
         });
     </script>
-    <script src="js/members-supabase.js?v=20250729"></script>
-    <script src="js/member-profile-preview.js?v=20250811-fix"></script>
-    <script src="js/members-search.js?v=20250729"></script>
-    <script src="js/members-connection.js?v=20250729"></script>
-    <script src="js/members-view-mode.js?v=20250729"></script>
+    <script src="js/members-supabase.js?v=20250812"></script>
+    <script src="js/member-profile-preview.js?v=20250812"></script>
+    <script src="js/members-search.js?v=20250812"></script>
+    <script src="js/members-connection.js?v=20250812"></script>
+    <script src="js/members-view-mode.js?v=20250812"></script>
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
