イベント読み込み問題の包括的解決策を実装
- events-debug.js: 診断・自動修復ツール追加
  - Supabase接続診断
  - EventModal初期化チェック
  - 自動修復機能
  - フォールバック表示

- EVENTS_TROUBLESHOOTING.md: 詳細なトラブルシューティングガイド
  - 即座の解決策
  - 長期的解決策
  - 診断コマンド集

- events.html: デバッグツールを読み込むように変更

問題の根本原因：
1. showCreateEventModalエラー → 修正済みだが本番未反映
2. イベント読み込み失敗 → Supabase接続問題の可能性

--- a/events.html
+++ b/events.html
@@ -369,6 +369,8 @@
     <!-- FullCalendar JS -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/ja.js"></script>
+    <!-- イベントデバッグツール（問題診断用） -->
+    <script src="js/events-debug.js"></script>
     <!-- カレンダー連携 -->
     <script src="js/calendar-integration.js?v=20250812"></script>
     <!-- Google API (オプション) -->
