--- a/events.html
+++ b/events.html
@@ -361,9 +361,9 @@
     <script src="js/profile-sync.js"></script>
     <script src="js/notifications-realtime-unified.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
-    <script src="js/event-modal.js?v=20250812"></script>
-    <script src="js/events-supabase.js?v=20250812"></script>
-    <script src="js/dashboard.js?v=20250812"></script>
+    <script src="js/event-modal.js?v=20250812.2"></script>
+    <script src="js/events-supabase.js?v=20250812.2"></script>
+    <script src="js/dashboard.js?v=20250812.2"></script>
     <!-- <script src="js/event-registration.js"></script> Disabled: Duplicate functionality with events-supabase.js -->
     <!-- <script src="js/notifications.js"></script> -->
     <!-- FullCalendar JS -->
@@ -372,7 +372,7 @@
     <!-- イベントデバッグツール（問題診断用） -->
     <script src="js/events-debug.js"></script>
     <!-- カレンダー連携 -->
-    <script src="js/calendar-integration.js?v=20250812"></script>
+    <script src="js/calendar-integration.js?v=20250812.2"></script>
     <!-- Google API (オプション) -->
     <script async defer src="https://apis.google.com/js/api.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
