fix: 全ページのheader-rightとbreadcrumbリンクパスを統一 - dashboard.htmlに合わせて修正

--- a/events.html
+++ b/events.html
@@ -209,7 +209,7 @@
                             イベント
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>イベント</span>
                         </nav>
