--- a/matching.html
+++ b/matching.html
@@ -200,7 +200,7 @@
                             マッチング
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>マッチング</span>
                         </nav>
