--- a/notifications.html
+++ b/notifications.html
@@ -201,7 +201,7 @@
                             通知一覧
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>通知</span>
                         </nav>
