--- a/settings.html
+++ b/settings.html
@@ -205,7 +205,7 @@
                             設定
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>設定</span>
                         </nav>
