--- a/messages.html
+++ b/messages.html
@@ -205,7 +205,7 @@
                             メッセージ
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>メッセージ</span>
                         </nav>
