--- a/profile.html
+++ b/profile.html
@@ -204,7 +204,7 @@
                             プロフィール
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>プロフィール</span>
                         </nav>
