--- a/referral.html
+++ b/referral.html
@@ -207,7 +207,7 @@
                             紹介プログラム
                         </h1>
                         <nav class="breadcrumb">
-                            <a href="/dashboard">ダッシュボード</a>
+                            <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>紹介プログラム</span>
                         </nav>
