fix: 登録ページの複数の問題を修正 - auth.cssを追加して戻るボタンのスタイルを修正 - 文字数カウントJSの競合を解消（register-strict-validation.jsの重複処理を無効化） - リンク切れ修正（company.html→about.html、/terms→terms.html）

--- a/register.html
+++ b/register.html
@@ -16,6 +16,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="css/auth-unified.css">
     <!-- レジスター画面のレイアウト修正 -->
     <link rel="stylesheet" href="css/auth-register-fix.css">
@@ -633,7 +634,7 @@
                     <div class="form-options">
                         <label class="checkbox-label">
                             <input type="checkbox" name="agree" data-required="true">
-                            <span><a href="/terms" target="_blank">利用規約</a>に同意する</span>
+                            <span><a href="terms.html" target="_blank">利用規約</a>に同意する</span>
                         </label>
                     </div>
                     
