--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                 <div class="footer-links">
                     <a href="privacy.html">プライバシーポリシー</a>
                     <a href="terms.html">利用規約</a>
-                    <a href="company.html">運営会社</a>
+                    <a href="about.html">運営会社</a>
                 </div>
             </div>
             
