--- a/register.html
+++ b/register.html
@@ -92,7 +92,7 @@
                     
                     <div class="form-group">
                         <label for="email">メールアドレス<span class="required">*</span></label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" autocomplete="email" required>
                     </div>
                     
                     <div class="form-group">
