コネクションページを復元し、全ページのサイドバーにリンクを追加
- connections.htmlをVer.010から復元
- connections.cssとconnections-manager-simple.jsを復元
- 全主要ページ(dashboard, members, events等)のサイドバーとモバイルメニューにコネクションリンクを追加
- members.htmlのHTML構造修正（重複リンクの削除）

--- a/messages.html
+++ b/messages.html
@@ -71,6 +71,18 @@
                     <a href="members.html" class="mobile-nav-link">
                         <i class="fas fa-users"></i>
                         <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                     </a>
                 </li>
                 <li>
@@ -145,6 +157,18 @@
                         <a href="members.html" class="sidebar-link">
                             <i class="fas fa-users"></i>
                             <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                         </a>
                     </li>
                     <li>
