--- a/dashboard.html
+++ b/dashboard.html
@@ -87,6 +87,18 @@
                     <a href="members.html" class="mobile-nav-link">
                         <i class="fas fa-users"></i>
                         <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                     </a>
                 </li>
                 <li>
@@ -161,6 +173,18 @@
                         <a href="members.html" class="sidebar-link">
                             <i class="fas fa-users"></i>
                             <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                         </a>
                     </li>
                     <li>
