--- a/matching.html
+++ b/matching.html
@@ -66,6 +66,18 @@
                     <a href="members.html" class="mobile-nav-link">
                         <i class="fas fa-users"></i>
                         <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                     </a>
                 </li>
                 <li>
@@ -140,6 +152,18 @@
                         <a href="members.html" class="sidebar-link">
                             <i class="fas fa-users"></i>
                             <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                         </a>
                     </li>
                     <li>
