--- a/members.html
+++ b/members.html
@@ -76,9 +76,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="events.html" class="mobile-nav-link">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>イベント</span>
+                    <a href="connections.html" class="mobile-nav-link">
+                        <i class="fas fa-link"></i>
+                        <span>コネクション</span>
                     </a>
                 </li>
                 <li>
@@ -150,6 +150,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="events.html" class="sidebar-link">
                             <i class="fas fa-calendar-alt"></i>
                             <span>イベント</span>
@@ -209,6 +215,18 @@
                             <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>メンバー</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="mobile-nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="connections.html" class="sidebar-link">
+                            <i class="fas fa-link"></i>
+                            <span>コネクション</span>
                         </nav>
                     </div>
                 </div>
