--- a/notifications.html
+++ b/notifications.html
@@ -65,18 +65,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="members.html" class="mobile-nav-link">
-                        <i class="fas fa-users"></i>
-                        <span>メンバー</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="connections.html" class="mobile-nav-link">
-                            <i class="fas fa-link"></i>
-                            <span>コネクション</span>
-                        </a>
-                    </li>
-                    <li>
                         <a href="connections.html" class="sidebar-link">
                             <i class="fas fa-link"></i>
                             <span>コネクション</span>
@@ -148,18 +136,6 @@
                         <a href="dashboard.html" class="sidebar-link">
                             <i class="fas fa-home"></i>
                             <span>ダッシュボード</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="members.html" class="sidebar-link">
-                            <i class="fas fa-users"></i>
-                            <span>メンバー</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="connections.html" class="mobile-nav-link">
-                            <i class="fas fa-link"></i>
-                            <span>コネクション</span>
                         </a>
                     </li>
                     <li>
@@ -339,7 +315,7 @@
                                 <button class="btn btn-small btn-outline" onclick="rejectConnectionRequest('user-id-123', '田中花子')">
                                     <i class="fas fa-times"></i> 拒否する
                                 </button>
-                                <a href="members.html?id=user-id-123" class="btn btn-small btn-outline">プロフィールを見る</a>
+                                <a href="profile.html?user=user-id-123" class="btn btn-small btn-outline">プロフィールを見る</a>
                             </div>
                         </div>
                     </div>
@@ -358,7 +334,7 @@
                                 プロフィールを確認してコンタクトを取ってみましょう。
                             </p>
                             <div class="notification-actions">
-                                <a href="members.html" class="btn btn-small btn-primary">プロフィールを見る</a>
+                                <a href="profile.html" class="btn btn-small btn-primary">プロフィールを見る</a>
                                 <a href="messages.html" class="btn btn-small btn-outline">メッセージを送る</a>
                             </div>
                         </div>
