修正: 構文エラーとvideo preloadエラーを解決
- homepage-perfect-final.js: arrow関数の構文エラー修正
- notifications-unified.js: console.logコメントアウトの構文修正
- production-ready-check.js: forEachの空関数修正
- index.html: 非対応のvideo preload linkをコメントアウト
- main.js: 重複する動画再生処理を統合

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Video Preload Optimization -->
-    <link rel="preload" href="assets/interconnect-top.mp4" as="video" type="video/mp4" crossorigin="anonymous">
+    <!-- Video preloadは一部ブラウザで未サポートのため無効化 -->
+    <!-- <link rel="preload" href="assets/interconnect-top.mp4" as="video" type="video/mp4" crossorigin="anonymous"> -->
     <link rel="prefetch" href="assets/interconnect-top.mp4" as="video" type="video/mp4">
     <link rel="dns-prefetch" href="assets/">
     
