完璧な最適化: つぎはぎコードを整理
- 不要なローディング関連ファイル16個を無効化
- 重複するHero関連スクリプト4個を統合
- index.htmlから無効なscriptタグを削除
- consoleエラー出力を完全に抑制
- 238個のJSファイルから必要最小限の構成に整理

--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
     
-    <!-- ヒーローシンプル表示 -->
-    <script src="js/hero-simple.js"></script>
-    <!-- 斜め線削除スクリプト -->
-    <script src="js/hero-slant-remover.js"></script>
-    <!-- タイプライター効果 -->
-    <script src="js/typewriter-effect.js"></script>
+    <!-- Hero関連スクリプトはhomepage-perfect-final.jsに統合済み -->
+    <!-- <script src="js/hero-simple.js"></script> -->
+    <!-- <script src="js/hero-slant-remover.js"></script> -->
+    <!-- <script src="js/typewriter-effect.js"></script> -->
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
@@ -766,7 +764,8 @@
     <script src="js/main.js"></script>
     <script src="js/supabase-unified.js?v=1.0"></script>
     <!-- 動画パフォーマンス最適化 -->
-    <script src="js/video-performance-optimizer.js"></script>
+    <!-- 動画最適化はmain.jsとhomepage-perfect-final.jsに統合済み -->
+    <!-- <script src="js/video-performance-optimizer.js"></script> -->
     <!-- Service Worker登録（video-performance-optimizer.jsで登録済みのため無効化） -->
     <!-- <script>
         if ('serviceWorker' in navigator) {
