--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
-    <script>
-        // ローディング画面を即座に表示
-        document.write(`
-        <div id="instantLoadingScreen" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;z-index:99999;display:flex;align-items:center;justify-content:center;">
-            <div style="text-align:center;">
-                <div style="color:white;font-size:24px;font-weight:300;letter-spacing:0.2em;margin-bottom:20px;">INTER CONNECT</div>
-                <div style="width:200px;height:2px;background:rgba(255,255,255,0.2);border-radius:2px;overflow:hidden;margin:0 auto;">
-                    <div id="loadingBar" style="height:100%;background:white;width:0%;transition:width 2s ease-out;"></div>
-                </div>
+    <div id="instantLoadingScreen" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;z-index:99999;display:flex;align-items:center;justify-content:center;">
+        <div style="text-align:center;">
+            <div style="color:white;font-size:24px;font-weight:300;letter-spacing:0.2em;margin-bottom:20px;">INTER CONNECT</div>
+            <div style="width:200px;height:2px;background:rgba(255,255,255,0.2);border-radius:2px;overflow:hidden;margin:0 auto;">
+                <div id="loadingBar" style="height:100%;background:white;width:0%;transition:width 2s ease-out;"></div>
             </div>
         </div>
-        `);
+    </div>
+    <script>
+        // document.writeを使わない安全な方法
         document.body.style.overflow = 'hidden';
         // プログレスバーの制御は homepage-perfect-final.js に統合
     </script>
