重大修正: 文字が表示されない問題を完全解決
【問題の原因】
1. typewriter-init.cssが文字を完全に隠していた
   - opacity: 0 !important
   - visibility: hidden !important

2. hero-slant-fix.cssが::before/::afterを削除
   - コンテンツも消えていた

【修正内容】
1. 問題のあるCSSファイルを無効化
   - typewriter-init.css → disabled-css/
   - hero-slant-fix.css → disabled-css/

2. index.htmlから該当CSSリンクを削除

3. homepage-perfect-final.jsを修正
   - .section-badgeも表示するように追加

これで文字が正しく表示されます

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <link rel="stylesheet" href="css/video-poster-fallback.css">
     <!-- ヒーローセクション -->
     <link rel="stylesheet" href="css/hero.css">
-    <!-- タイプライター初期状態 -->
-    <link rel="stylesheet" href="css/typewriter-init.css">
-    <!-- 斜め線の強制削除 -->
-    <link rel="stylesheet" href="css/hero-slant-fix.css">
+    <!-- タイプライター初期状態（文字を隠すので無効化） -->
+    <!-- <link rel="stylesheet" href="css/typewriter-init.css"> -->
+    <!-- 斜め線の強制削除（::beforeと::afterを削除してしまうので無効化） -->
+    <!-- <link rel="stylesheet" href="css/hero-slant-fix.css"> -->
     <!-- z-index優先順位管理 -->
     <link rel="stylesheet" href="css/z-index-priority.css">
     
