--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                    muted 
                    loop 
                    playsinline 
-                   preload="metadata"
+                   preload="none"
                    poster="assets/video-poster.svg">
                 <source src="assets/interconnect-top.mp4" type="video/mp4">
                 お使いのブラウザは動画をサポートしていません。
