fix: マッチング・コネクション機能の初期化問題を修正
- matching-init-fix.js: 削除された重要な初期化コードを復活
- Supabase準備待機処理を追加
- 初期化タイミングの問題を修正
- デバッグ用のテストページを追加
- matching.htmlとconnections.htmlに初期化修正スクリプトを追加

修正内容:
- supabaseReadyイベントの待機処理
- DOM準備完了の確実な検知
- 初期化関数の適切な呼び出し
- エラーハンドリングの改善

--- a/connections.html
+++ b/connections.html
@@ -303,6 +303,8 @@
     <!-- responsive-menu-simple.jsを削除してsidebar-toggle.jsのみ使用 -->
     <script src="js/sidebar-toggle.js"></script>
     <script src="js/connections-manager-simple.js?v=2024121707"></script>
+    <!-- マッチング初期化修正 -->
+    <script src="js/matching-init-fix.js"></script>
     <!-- プロフィールモーダル機能 -->
     <script src="js/members-profile-modal.js"></script>
     <script src="js/user-dropdown-handler.js"></script>
