--- a/matching.html
+++ b/matching.html
@@ -350,6 +350,8 @@
     
     <!-- マッチングシステム統合JavaScript（47ファイルを1つに統合） -->
     <script src="js/matching-unified.js?v=5.0"></script>
+    <!-- マッチング初期化修正 -->
+    <script src="js/matching-init-fix.js"></script>
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
