fix: マッチング・コネクション機能の完全修正版を実装
削除された重要コードを全て復活:
- window.supabase Proxy（後方互換性）
- MATCHING_CONFIG設定オブジェクト
- matchingSupabaseインスタンス
- 強制読み込み機能（forceLoadMatchingData）
- 詳細なデバッグ機能（debugMatching）

修正内容:
- profiles/connectionsテーブルへの正しいアクセス
- エラー時のダミーデータ表示
- コネクト申請機能の復活
- 初期化タイミングの完全修正

デバッグコマンド:
- forceLoadMatchingData(): データ強制読み込み
- debugMatching(): システム状態確認

--- a/connections.html
+++ b/connections.html
@@ -305,6 +305,8 @@
     <script src="js/connections-manager-simple.js?v=2024121707"></script>
     <!-- マッチング初期化修正 -->
     <script src="js/matching-init-fix.js"></script>
+    <!-- マッチング完全修正版（削除されたコードを復活） -->
+    <script src="js/matching-complete-fix.js"></script>
     <!-- プロフィールモーダル機能 -->
     <script src="js/members-profile-modal.js"></script>
     <script src="js/user-dropdown-handler.js"></script>
