--- a/matching.html
+++ b/matching.html
@@ -352,6 +352,8 @@
     <script src="js/matching-unified.js?v=5.0"></script>
     <!-- マッチング初期化修正 -->
     <script src="js/matching-init-fix.js"></script>
+    <!-- マッチング完全修正版（削除されたコードを復活） -->
+    <script src="js/matching-complete-fix.js"></script>
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
